test-suite/tests/ui/states/conflicting_assign_delete.stderr
error: deleted state cannot also be assigned
 --> tests/ui/states/conflicting_assign_delete.rs:8:32
  |
8 |     #[stated(assign(A), delete(A))]
  |                                ^
